# quick-question

./: .gitignore  Cargo.toml  LICENSE  README.md  demo_input_handling.sh  test_formatting.sh
prompts/: system.txt
src/: config.rs  main.rs
src/providers/: claude.rs  mod.rs
tests/: demo_input_handling.sh  format_test.rs  test_shell_detection.sh
