[package]
name = "quick-question"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "qq"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
anyhow = "1.0"
toml = "0.8"
async-trait = "0.1"
